finished adding in Linda's edits

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+~\cite{hofler13,bazarov05,yrss:09,jefferson,gull1,gull2} \documentclass{article}
 \usepackage{latexsym}
 \usepackage{color}
 \setlength{\parskip}{3mm}
@@ -61,7 +61,7 @@ they are – space charge, etc. After all, this is primarily a physics
 journal so the physics context for the application needs to be clear.
 
 {\bf Our response:} {\color{blue} 
-	To address this concern, the following was added on lines XX-XX in the updated manuscript:
+	To address this concern, the following was added on lines 28-41 in the updated manuscript:
 
 A hallmark of the AWA facility is the flexibility to swap physical
 components in the beamlines, which enables different, often novel,
@@ -188,7 +188,7 @@ more compelling motivator to encourage users to consider the system
 they have developed.
 
 {\bf Our response:} {\color{blue} The statements on the lines  17-19 of our initial submission are misleading, as
-the referee correctly recognized. We replace them with the following on lines 18-27 of the updated manuscript:  
+the referee correctly recognized. We replace them with the following on lines 17-27 of the updated manuscript:  
 
 Despite the success of on-line models in some facilities [ref here], 
 and various model dependent and model independent tuning and optimization techniques, 
