--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,3 +1,65 @@
+@article{jefferson,
+	title = {Simultaneous optimization of the cavity heat load and trip rates in linacs using a genetic algorithm},
+	author = {Terzi\ifmmode \acute{c}\else \'{c}\fi{}, Bal\ifmmode \check{s}\else \v{s}\fi{}a and Hofler, Alicia S. and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
+	journal = {Phys. Rev. ST Accel. Beams},
+	volume = {17},
+	issue = {10},
+	pages = {101003},
+	numpages = {12},
+	year = {2014},
+	month = {Oct},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevSTAB.17.101003},
+	url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.17.101003}
+}
+
+@article{gull1,
+	author         = "Gulliford, Colwyn and Bartnik, Adam and Bazarov, Ivan",
+	title          = "{Multiobjective optimizations of a novel cryocooled dc
+	gun based ultrafast electron diffraction beam line}",
+	journal        = "Phys. Rev. Accel. Beams",
+	volume         = "19",
+	year           = "2016",
+	number         = "9",
+	pages          = "093402",
+	doi            = "10.1103/PhysRevAccelBeams.19.093402",
+	eprint         = "1510.07738",
+	archivePrefix  = "arXiv",
+	primaryClass   = "physics.acc-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1510.07738;%%"
+}
+
+@article{gull2,
+	title = {Multiobjective optimization design of an rf gun based electron diffraction beam line},
+	author = {Gulliford, Colwyn and Bartnik, Adam and Bazarov, Ivan and Maxson, Jared},
+	journal = {Phys. Rev. Accel. Beams},
+	volume = {20},
+	issue = {3},
+	pages = {033401},
+	numpages = {6},
+	year = {2017},
+	month = {Mar},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevAccelBeams.20.033401},
+	url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.20.033401}
+}
+
+@article{xiaobiao,
+	title = {Robust simplex algorithm for online optimization},
+	author = {Huang, Xiaobiao},
+	journal = {Phys. Rev. Accel. Beams},
+	volume = {21},
+	issue = {10},
+	pages = {104601},
+	numpages = {8},
+	year = {2018},
+	month = {Oct},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevAccelBeams.21.104601},
+	url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.21.104601}
+}
+
+
 @article{hofler13,
 	author         = "Hofler, Alicia and Terzic, Balsa and Kramer, Matthew and
 	Zvezdin, Anton and Morozov, Vasiliy and Roblin, Yves and
@@ -16,7 +78,7 @@
 
 @misc{gpt,
 	title =	 "{General Particle Tracer (GPT}",
-	author = "Pulsar Physics"
+	author = "Pulsar Physics",
 	note =	 "\url{http://www.pulsar.nl/gpt}"
 }
 
@@ -56,20 +118,13 @@
   year = {2013}
 }
 
-@techreport{borl:00,
+@techreport{elegant,
   title={Elegant: A flexible SDDS-compliant code for accelerator simulation},
   author={Borland, M.},
   year={2000-2018},
   institution={Argonne National Lab., IL (US)}
 }
 
-@techreport{homdyn,
-  title =	 "{Homdyn User Guide}",
-  author =	 "M. Ferrario",
-  institution =	 "LNF",
-  note = "\url{http://nicadd.niu.edu/fnpl/homdyn/manual.pdf}",
-  year =	 {2006}
-}
 
 @techreport{opal,
 title = {The {OPAL} (Object Oriented Parallel Accelerator Library) Framework},
@@ -94,22 +149,6 @@ year = {(2008-2018)}
   author =	 "A. C. Duffy",
   institution =	 "Florida State University",
   year =	 {2009}
-}
-
-@techreport{pedr:10,
-  title  = "{SwissFEL Injector Conceptual Design Report}",
-  author = {M. Pedrozzi and V. Arsov and B. Beutner and M. Dehler and A.
-          Falone and W. Fichte and A. Fuchs and R. Ganter and C. Hauri and S.
-          Hunziker and R. Ischebeck and H. Jöhri and Y. Kim and M. Negrazu
-          ands P. Pearce and J.-Y. Raguin and S. Reiche and V. Schlott and T.
-          Schietinger and T. Schilcher and L. Schulz and W. Tron and D.
-          Vermeulen and E. Zimoch and J. Wickstr\"om},
-  institution = "Paul Scherrer Institut",
-  note        = {\url{
-http://www.psi.ch/swissfel/CurrentSwissFELPublicationsEN/SwissFEL_Injector_CDR_310810.pdf
-      }},
-  number      = "PSI-PR-10-05",
-  year        = {2010}
 }
 
 @techreport{bsex:10,
@@ -243,16 +282,6 @@ http://www.psi.ch/swissfel/CurrentSwissFELPublicationsEN/SwissFEL_Injector_CDR_3
   publisher={Springer}
 }
 
-@article{yakb:13,
-  title={A Parallel General Purpose Multi-Objective Optimization Framework,
-  with Application To Beam Dynamics},
-  author={Ineichen, Y. and Adelmann, A. and Kolano, A. and Bekas, C. and
-      Curioni, A. and Arbenz, P.},
-  journal={arXiv preprint arXiv:1302.2889},
-  year={2013},
-  note={Submitted to SISC},
-  url={http://arxiv.org/abs/1302.2889}
-}
 
 @article{bgpb:06,
   title={Randomized gossip algorithms},
@@ -464,51 +493,6 @@ language={English}
     year = {1999}
 }
 
-@article{chpa:07,
-    abstract = {{Multiobjective Optimization (MO) has many applications in
-        such fields as the Internet, finance, biomedicine, management
-            science, game theory and engineering. However, solving MO
-            problems is not an easy task. Searching for all Pareto optimal
-            solutions is expensive and a time consuming process because
-            there are usually exponentially large (or infinite) Pareto
-            optimal solutions. Even for simple problems determining whether
-            a point belongs to the Pareto set is   -hard. In this paper, we
-            discuss recent developments in MO. These include optimality
-            conditions, applications, global optimization techniques, the
-            new concept of epsilon Pareto optimal solution, and
-            heuristics.}},
-    author = {Chinchuluun, Altannar and Pardalos, Panos},
-    day = {1},
-    doi = {10.1007/s10479-007-0186-0},
-    issn = {0254-5330},
-    journal = {Annals of Operations Research},
-    month = {October},
-    number = {1},
-    pages = {29--50},
-    publisher = {Springer Netherlands},
-    title = {{A survey of recent developments in multiobjective optimization}},
-    url = {http://dx.doi.org/10.1007/s10479-007-0186-0},
-    volume = {154},
-    year = {2007}
-}
-
-@article{maar:04,
-    abstract = {{A survey of current continuous nonlinear multi-objective optimization (MOO) concepts and methods is presented. It consolidates and relates seemingly different terminology and methods. The methods are divided into three major categories: methods with a priori articulation of preferences, methods with a posteriori articulation of preferences, and methods with no articulation of preferences. Genetic algorithms are surveyed as well. Commentary is provided on three fronts, concerning the advantages and pitfalls of individual methods, the different classes of methods, and the field of MOO as a whole. The Characteristics of the most significant methods are summarized. Conclusions are drawn that reflect often-neglected ideas and applicability to engineering problems. It is found that no single approach is superior. Rather, the selection of a specific method depends on the type of information that is provided in the problem, the user's preferences, the solution requirements, and the availability of software.}},
-    author = {Marler, R. T. and Arora, J. S.},
-    day = {1},
-    doi = {10.1007/s00158-003-0368-6},
-    issn = {1615-147X},
-    journal = {Structural and Multidisciplinary Optimization},
-    month = {April},
-    number = {6},
-    pages = {369--395},
-    publisher = {Springer Berlin / Heidelberg},
-    title = {{Survey of multi-objective optimization methods for engineering}},
-    url = {http://dx.doi.org/10.1007/s00158-003-0368-6},
-    volume = {26},
-    year = {2004}
-}
-
 @article{bazarov05,
   title = {Multivariate optimization of a high brightness dc gun photoinjector},
   author = {Bazarov, Ivan V. and Sinclair, Charles K.},
@@ -566,17 +550,6 @@ language={English}
     year = {2009}
 }
 
-
-@article{basi:05,
-  title={Multivariate optimization of a high brightness dc gun photoinjector},
-  author={Bazarov, I.V. and Sinclair, C.K.},
-  journal={Physical Review Special Topics-Accelerators and Beams},
-  volume={8},
-  number={3},
-  pages={034202},
-  year={2005},
-  publisher={APS}
-}
 
 
 @article{zpbg:02,
@@ -879,17 +852,6 @@ language={English}
     address = {San Diego, CA, USA}
 }
 
-@inproceedings{akir:09,
-    author = {Adelmann, A. and Kraus, Ch. and Ineichen, Y. and
-      Russell, S. and Bi, Y. and Yang, J.J.},
-    booktitle = {Proceedings ICAP09},
-    location = {San Francisco, California, USA},
-    title = {The Object Oriented Parallel Accelerator Library (OPAL), Design,
-      Implementation and Application},
-    url = {http://accelconf.web.cern.ch/AccelConf/ICAP2009/papers/we3iopk01.pdf},
-    year = {2009}
-}
-
 @inproceedings{bahe:77,
     abstract = {This paper investigates some problems associated with an argument evaluation order that we call  ” future” order, which is different from both call-by-name and call-by-value, In call-by-future, each formal parameter of a function is bound to a separate process (called a  ” future”) dedicated to the evaluation of the corresponding argument. This mechanism allows the fully parallel evaluation of arguments to a function, and has been shown to augment the expressive power of a {language.We} discuss an approach to a problem that arises in this context: futures which were thought to be relevant when they were created become irrelevant through being ignored in the body of the expression where they were bound. The problem of irrelevant processes also appears in multiprocessing problem-solving systems which start several processors working on the same problem but with different methods, and return with the solution which finishes first. This parallel method strategy has the drawback that the processes which are investigating the losing methods must be identified, stopped, and re-assigned to more useful tasks.},
     address = {New York, NY, USA},
@@ -940,13 +902,6 @@ language={English}
   organization={ACM}
 }
 
-@misc{pcfq:10,
-    title = {Multiobjective Optimization for the Advanced Photoinjector Experiment (APEX)},
-    url = {http://srv-fel-0.maxlab.lu.se/TOC/WEPB37.PDF},
-    note = "\url{http://srv-fel-0.maxlab.lu.se/TOC/WEPB37.PDF}",
-    author = {Papadopoulos, C.F. and Corlett, J. and Filippeto, D. and Qiang, J.},
-    year = {2010}
-}
 
 @misc{iakb:13,
   author = {Ineichen, Y. and Adelmann, A. and Kolano, A. and Bekas, C. and
@@ -1228,16 +1183,6 @@ paper.},
                   \url{http://www.netlib.org/fftpack/}"
 }
 
-@book{fowa:60,
-  author =	 "G.~E.~Forsythe and W.~R.~Wasow",
-  title =	 "Finite-difference methods for partial differential
-                  equations",
-  publisher =	 "Wiley",
-  address =	 "New York",
-  year =	 1960
-}
-
-
 @article{dnld:06,
   title={jMetal: a java framework for developing multi-objective optimization metaheuristics},
   author={Durillo, J.J. and Nebro, A.J. and Luna, F. and Dorronsoro, B. and Alba, E.},
@@ -1274,22 +1219,6 @@ paper.},
   publisher =	 "SIAM",
   address =	 "Philadelphia, PA",
   year =	 1997
-}
-
-@book{hack:85,
-  author =	 "W. Hackbusch",
-  title =	 "Multigrid Methods and Applications",
-  publisher =	 "Springer",
-  address =	 "Berlin",
-  year =	 1985
-}
-
-@book{hack:94,
-author =       "W. Hackbusch",
-  title =        "Iterative solution of large sparse systems of equations",
-  publisher =    "Springer",
-  address =      "Berlin",
-  year =         1994
 }
 
 @article{Trilinos-TOMS,
