--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -80,27 +80,27 @@
 
 
 \begin{abstract}
-Particle accelerators are invaluable tools for research in the basic and
-  applied sciences, such as materials science, chemistry,
-  the biosciences, particle physics, nuclear physics and medicine.
-The design, commissioning, and operation of accelerator facilities is a
-  non-trivial task, due to the large number of control parameters and the
-  complex interplay of several conflicting design goals.
-We propose to tackle this problem by means of multi-objective optimization
-  algorithms which also facilitate a parallel deployment.
-In order to compute solutions in a meaningful time frame, a fast 
-  and scalable software framework is required.
-In this paper, we
-present a general-purpose framework for simulation-based
-multi-objective optimization methods that allows the automatic
-investigation of optimal sets of machine parameters.
-Using evolutionary algorithms as the optimizer and \textsc{OPAL} as the 
-  forward solver, validation experiments and 
- results of multi-objective optimization problems in the domain of beam
-  dynamics are presented. The high charge beam line at the Argonne Wakefield 
-  Accelerator Facility was used as the beam dynamics model. 
-  Optimized solutions found by the framework were used to finish the design 
+Particle accelerators are invaluable tools for research in the basic and applied sciences, such as materials science, chemistry,
+  the biosciences, particle physics, nuclear physics and medicine. The design, commissioning, and operation of accelerator facilities is a
+  non-trivial task, due to the large number of control parameters and the complex interplay of several conflicting design goals.
+  The Argonne Wakefield Accelerator facility has some unique challenges resulting from its purpose to carry out advanced accelerator R\&D.
+  Individual experiments often have challenging beam requirements, and the physical configuration of the beamlines is often changed
+  to accommodate the variety of supported experiments. The need for rapid deployment of different operational settings
+  further complicates the optimization work that must be done for multiple constraints and challenging operational regimes. 
+  One example of this is an independently staged two-beam acceleration experiment which requires the construction 
+  of an additional beamline (this is now in progress).  The high charge drive beam, well into the space charge regime, must be threaded
+  through small aperture (\SI{17.6}{mm}) decelerating structures.  
+  In addition, the bunch length must be sufficiently short to maximize power generation in the decelerator.  
+We propose to tackle this problem by means of multi-objective optimization algorithms which also facilitate a parallel deployment.
+In order to compute solutions in a meaningful time frame, a fast and scalable software framework is required.
+In this paper, we present a general-purpose framework for simulation-based
+multi-objective optimization methods that allows the automatic investigation of optimal sets of machine parameters.
+Using evolutionary algorithms as the optimizer and \textsc{OPAL} as the forward solver, validation experiments and 
+ results of multi-objective optimization problems in the domain of beam dynamics are presented. 
+  Optimized solutions for the new high charge drive beamline found by the framework were used to finish the design 
   of a two beam acceleration experiment.
+  The selected solution along with the associated beam parameters is presented.
+  
   
 \end{abstract}
 
